--- a/colander/locale/pt_BR/LC_MESSAGES/colander.po
+++ b/colander/locale/pt_BR/LC_MESSAGES/colander.po
@@ -1,129 +1,142 @@
-# Translations template for colander.
+# Portuguese (Brazil) translations for colander.
 # Copyright (C) 2010 ORGANIZATION
 # This file is distributed under the same license as the colander project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
+# Nando Florestan <nandoflorestan@gmail.com>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: colander 0.5.2\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2010-04-25 21:09-0400\n"
-"PO-Revision-Date: 2010-09-10 06:50+0300\n"
-"Last-Translator: Fernando Correa Neto <fcdoth@gmail.com>\n"
-"Language-Team: repoze developers <repoze-dev@lists.repoze.org>\n"
+"POT-Creation-Date: 2012-03-20 23:23-0300\n"
+"PO-Revision-Date: 2012-03-20 23:28-0300\n"
+"Last-Translator: Nando Florestan <nandoflorestan@gmail.com>\n"
+"Language-Team: Portuguese <>\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.5\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Generated-By: Babel 0.9.6\n"
 
-#: colander/__init__.py:177
+#: colander/__init__.py:221
 msgid "Invalid value"
 msgstr "Valor inválido"
 
-#: colander/__init__.py:202
+#: colander/__init__.py:254
 msgid "String does not match expected pattern"
-msgstr "A string não é igual ao padrão esperado"
+msgstr "Não corresponde ao padrão esperado"
 
-#: colander/__init__.py:217
+#: colander/__init__.py:269
 msgid "Invalid email address"
 msgstr "Endereço de email inválido"
 
-#: colander/__init__.py:246
+#: colander/__init__.py:298
 msgid "${val} is less than minimum value ${min}"
-msgstr "${val} é menor do que o valor mínimo ${min}"
+msgstr "${val} é menor do que o mínimo ${min}"
 
-#: colander/__init__.py:247
+#: colander/__init__.py:299
 msgid "${val} is greater than maximum value ${max}"
-msgstr "${val} é maior do que o valor máximo ${max}"
+msgstr "${val} é maior do que o máximo ${max}"
 
-#: colander/__init__.py:279
+#: colander/__init__.py:331
 msgid "Shorter than minimum length ${min}"
 msgstr "Mais curto do que o comprimento mínimo ${min}"
 
-#: colander/__init__.py:285
+#: colander/__init__.py:337
 msgid "Longer than maximum length ${max}"
 msgstr "Mais longo do que o comprimento máximo ${max}"
 
-#: colander/__init__.py:298
+#: colander/__init__.py:350
 msgid "\"${val}\" is not one of ${choices}"
 msgstr "\"${val}\" não está entre ${choices}"
 
-#: colander/__init__.py:367
+#: colander/__init__.py:442
 msgid "\"${val}\" is not a mapping type: ${err}"
-msgstr "\"${val}\" não é um mapeamento do tipo: ${err}"
+msgstr "\"${val}\" não é um tipo de mapeamento: ${err}"
 
-#: colander/__init__.py:394
-msgid "\"${val}\" is required but missing"
-msgstr "\"${val}\" é requerido porém está vazio"
-
-#: colander/__init__.py:411
+#: colander/__init__.py:466
 msgid "Unrecognized keys in mapping: \"${val}\""
-msgstr "Chaves desconhecidas ao mapeamento: \"${val}\""
+msgstr "Chaves desconhecidas no mapeamento: \"${val}\""
 
-#: colander/__init__.py:461
-#: colander/__init__.py:539
+#: colander/__init__.py:562 colander/__init__.py:705
 msgid "\"${val}\" is not iterable"
 msgstr "Iterações não podem ser feitas em \"${val}\""
 
-#: colander/__init__.py:469
-msgid "\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
-msgstr "\"${val}\" tem um número incorreto de elementos (esperados ${exp}, obtidos ${was})"
+#: colander/__init__.py:570
+msgid ""
+"\"${val}\" has an incorrect number of elements (expected ${exp}, was ${was})"
+msgstr ""
+"\"${val}\" tem um número incorreto de elementos (${exp} esperados, ${was} "
+"obtidos)"
 
-#: colander/__init__.py:644
-msgid "${val} is not a string: %{err}"
+#: colander/__init__.py:919
+#| msgid "\"${val} cannot be serialized to str: ${err}"
+msgid "${val} cannot be serialized: ${err}"
+msgstr "\"${val} não pode ser serializado: ${err}"
+
+#: colander/__init__.py:937
+#| msgid "${val} is not a string: %{err}"
+msgid "${val} is not a string: ${err}"
 msgstr "${val} não é uma string: %{err}"
 
-#: colander/__init__.py:648
-#: colander/__init__.py:680
-#: colander/__init__.py:710
-#: colander/__init__.py:751
-#: colander/__init__.py:996
-msgid "Required"
-msgstr "Requerido"
-
-#: colander/__init__.py:662
-msgid "\"${val} cannot be serialized to str: ${err}"
-msgstr "\"${val} não pode ser serializado para str: ${err}"
-
-#: colander/__init__.py:683
-#: colander/__init__.py:692
-#: colander/__init__.py:713
-#: colander/__init__.py:722
+#: colander/__init__.py:957 colander/__init__.py:968
 msgid "\"${val}\" is not a number"
-msgstr "\"${val}\" não é um número número"
+msgstr "\"${val}\" não é um número"
 
-#: colander/__init__.py:747
+#: colander/__init__.py:1044
 msgid "${val} is not a string"
 msgstr "${val} não é uma string"
 
-#: colander/__init__.py:808
-#: colander/__init__.py:825
-#: colander/__init__.py:835
+#: colander/__init__.py:1104 colander/__init__.py:1121
+#: colander/__init__.py:1131
 msgid "relative name \"${val}\" irresolveable without package"
-msgstr "nome relativo \"${val}\" não pode ser resolvido sem o pacote"
+msgstr "O nome relativo \"${val}\" não pode ser resolvido sem o pacote"
 
-#: colander/__init__.py:860
-msgid "\"${val}\" is not a string"
-msgstr "\"${val}\" não é uma string"
-
-#: colander/__init__.py:868
-msgid "The dotted name \"${name}\" cannot be imported"
-msgstr "O pacote \"${name}\" não pode ser importado"
-
-#: colander/__init__.py:876
+#: colander/__init__.py:1161
 msgid "\"${val}\" has no __name__"
 msgstr "\"${val}\" não tem __name__"
 
-#: colander/__init__.py:918
-#: colander/__init__.py:982
-msgid "${val} cannot be parsed as an iso8601 date: ${err}"
-msgstr "${val} não pode ser entendido como uma data iso8601: ${err}"
+#: colander/__init__.py:1170
+msgid "\"${val}\" is not a string"
+msgstr "\"${val}\" não é uma string"
 
-#: colander/__init__.py:929
+#: colander/__init__.py:1179
+msgid "The dotted name \"${name}\" cannot be imported"
+msgstr "O pacote \"${name}\" não pode ser importado"
+
+#: colander/__init__.py:1226 colander/__init__.py:1307
+#| msgid "Invalid value"
+msgid "Invalid date"
+msgstr "Data inválida"
+
+#: colander/__init__.py:1242
 msgid "\"${val}\" is not a datetime object"
 msgstr "\"${val}\" não é um objeto datetime"
 
-#: colander/__init__.py:988
+#: colander/__init__.py:1318
 msgid "\"${val}\" is not a date object"
 msgstr "\"${val}\" não é um objeto date"
 
+#: colander/__init__.py:1383
+#| msgid "Invalid value"
+msgid "Invalid time"
+msgstr "Hora inválida"
+
+#: colander/__init__.py:1394
+#| msgid "\"${val}\" is not a datetime object"
+msgid "\"${val}\" is not a time object"
+msgstr "\"${val}\" não é um objeto time"
+
+#: colander/__init__.py:1605 colander/__init__.py:1607
+msgid "Required"
+msgstr "Obrigatório"
+
+#: colander/tests/test_colander.py:259 colander/tests/test_colander.py:266
+msgid "fail ${val}"
+msgstr "falha ${val}"
+
+#~ msgid "\"${val}\" is required but missing"
+#~ msgstr "\"${val}\" é obrigatório, mas está vazio"
+
+#~ msgid "${val} cannot be parsed as an iso8601 date: ${err}"
+#~ msgstr "${val} não pode ser entendido como uma data iso8601: ${err}"
