--- a/colander/locale/ru/LC_MESSAGES/colander.po
+++ b/colander/locale/ru/LC_MESSAGES/colander.po
@@ -20,15 +20,15 @@ msgstr ""
 
 #: colander/__init__.py:177
 msgid "Invalid value"
-msgstr ""
+msgstr "Неверное значение"
 
 #: colander/__init__.py:202
 msgid "String does not match expected pattern"
-msgstr ""
+msgstr "Строка не соответствует заданному шаблону"
 
 #: colander/__init__.py:217
 msgid "Invalid email address"
-msgstr ""
+msgstr "Неверный адрес электронной почты"
 
 #: colander/__init__.py:246
 msgid "${val} is less than minimum value ${min}"
@@ -40,59 +40,60 @@ msgstr "${val} больше чем ${max}"
 
 #: colander/__init__.py:279
 msgid "Shorter than minimum length ${min}"
-msgstr ""
+msgstr "Меньше, чем минимальная длина {$min}"
 
 #: colander/__init__.py:285
 msgid "Longer than maximum length ${max}"
-msgstr ""
+msgstr "Больше, чем максимальная длина {$min}"
 
 #: colander/__init__.py:298
 msgid "\"${val}\" is not one of ${choices}"
-msgstr ""
+msgstr "\"${val}\" не является одним из ${choices}"
 
 #: colander/__init__.py:367
 msgid "\"${val}\" is not a mapping type: ${err}"
-msgstr ""
+msgstr "\"${val}\" содержит неверный тип данных: ${err}"
 
 #: colander/__init__.py:394
 msgid "\"${val}\" is required but missing"
-msgstr ""
+msgstr "\"${val}\" является обязательным для заполнения"
 
 #: colander/__init__.py:411
 msgid "Unrecognized keys in mapping: \"${val}\""
-msgstr ""
+msgstr "Неизвестные ключи: \"${val}\""
 
 #: colander/__init__.py:461 colander/__init__.py:539
 msgid "\"${val}\" is not iterable"
-msgstr ""
+msgstr "\"${val}\" не является итератором"
 
 #: colander/__init__.py:469
 msgid ""
 "\"${val}\" has an incorrect number of elements (expected ${exp}, was "
 "${was})"
-msgstr ""
+msgstr "\"${val}\" содержит неверное число элементов (ожидалось ${exp}, но содержит "
+"${was})"
 
 #: colander/__init__.py:644
 msgid "${val} is not a string: %{err}"
-msgstr ""
+msgstr "${val} не является строкой: %{err}"
 
 #: colander/__init__.py:648 colander/__init__.py:680 colander/__init__.py:710
 #: colander/__init__.py:751 colander/__init__.py:996
 msgid "Required"
-msgstr "требуется"
+msgstr "Требуется"
 
 #: colander/__init__.py:662
 msgid "\"${val} cannot be serialized to str: ${err}"
-msgstr ""
+msgstr "\"${val} не может быть сериализовано в строку: ${err}"
 
 #: colander/__init__.py:683 colander/__init__.py:692 colander/__init__.py:713
 #: colander/__init__.py:722
 msgid "\"${val}\" is not a number"
-msgstr ""
+msgstr "\"${val}\" не является числом"
 
 #: colander/__init__.py:747
 msgid "${val} is not a string"
-msgstr ""
+msgstr "${val} не является строкой"
 
 #: colander/__init__.py:808 colander/__init__.py:825 colander/__init__.py:835
 msgid "relative name \"${val}\" irresolveable without package"
@@ -100,7 +101,7 @@ msgstr ""
 
 #: colander/__init__.py:860
 msgid "\"${val}\" is not a string"
-msgstr ""
+msgstr "\"${val}\" не является строкой"
 
 #: colander/__init__.py:868
 msgid "The dotted name \"${name}\" cannot be imported"
@@ -108,17 +109,17 @@ msgstr ""
 
 #: colander/__init__.py:876
 msgid "\"${val}\" has no __name__"
-msgstr ""
+msgstr "\"${val}\" не имеет аттрибута __name__"
 
 #: colander/__init__.py:918 colander/__init__.py:982
 msgid "${val} cannot be parsed as an iso8601 date: ${err}"
-msgstr ""
+msgstr "Значение ${val} не может быть распознано как дата в формате iso8601: ${err}"
 
 #: colander/__init__.py:929
 msgid "\"${val}\" is not a datetime object"
-msgstr ""
+msgstr "\"${val}\" не является объектом datetime"
 
 #: colander/__init__.py:988
 msgid "\"${val}\" is not a date object"
-msgstr ""
+msgstr "\"${val}\" не является объектом date"
 
