--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,8 +36,9 @@ Features
 
 - A new ``cstruct_children`` API should exist on schema types.  If
   ``SchemaNode.cstruct_children`` is called on a node with a type that does
-  not have a ``cstruct_children`` method, a deprecation warning is raised and
-  ``[]`` is returned (this may or may not be the correct value).
+  not have a ``cstruct_children`` method, a deprecation warning is emitted
+  and ``[]`` is returned (this may or may not be the correct value for your
+  custom type).
 
 Backwards Incompatibilities
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
